.conflict-side-0/crates/but-api-macros/tests/tests/ui/fail/base_receiver_self.stderr
error: Cannot handle &self, &mut self or self
  --> tests/ui/fail/base_receiver_self.rs:12:15
   |
12 |     fn method(&self, value: i32) -> anyhow::Result<i32> {
   |               ^^^^^
